--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-30  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-07-26  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
