--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Aug 11 22:41:23 2005  Tim Janik  <timj@gtk.org>
+
+	* configure.in: extended libguile check to check for guile-1.6 header
+	files being in place.
+
 Tue Aug  9 16:12:00 2005  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tools/bsefextract.cc: Implemented --focus-center and --focus-width
