--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+- print detail score with loop range (in progress printing)
+- save detail_names as comment with scroe_details
+- adjust inner loop abortion according to normed score values
 RELEASE(0.6.7):
 - gxk_tree_view_append_text_columns: s/on or of/on or off/
 - the properties dialog should have a "CANCEL" button, not close (since there's "apply")
