--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Dec 10 18:42:50 2005  Tim Janik  <timj@gtk.org>
+
+	* docs/web/*.texi: renamed to docs/web/*.doxi.
+
 Sat Dec 10 18:34:41 2005  Tim Janik  <timj@gtk.org>
 
 	* docs/web/about.texi:
