--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan  2 23:27:26 2006  Tim Janik  <timj@gtk.org>
+
+	* docs/web/*.doxi: heading and URL fixes.
+
 Thu Dec 22 23:20:01 2005  Tim Janik  <timj@gtk.org>
 
 	* docs/web/news.doxi:
