--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan  2 23:36:54 2006  Tim Janik  <timj@gtk.org>
+
+	* web/*.doxi: CVS moved here from docs/web/.
+
 Mon Jan  2 23:27:26 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/web/*.doxi: heading and URL fixes.
