--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-04  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.skip: Removed missing file.
+	* en_CA.po: Updated Canadian English translation.
+
 2005-08-01  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated.
